<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
	
  <parent>
    <groupId>se.skillytaire.cases</groupId>
    <artifactId>doe001</artifactId>
    <version>1</version>
    <relativePath>../pom.xml</relativePath>
  </parent>	

    <artifactId>doe</artifactId>
    <packaging>jar</packaging>
    <name>DOE</name>
	
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
    </properties>



    <dependencies>
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		</dependency>
        <dependency>
            	<groupId>org.hamcrest</groupId>
            	<artifactId>hamcrest-library</artifactId>
            	<version>1.3</version>
            	<scope>test</scope>
        </dependency>
	    
       <dependency>
  		<groupId>javax.servlet</groupId>
  		<artifactId>jstl</artifactId>
  		<version>1.2</version>
	</dependency>
	    
	<dependency>
		<groupId>javax.servlet</groupId>
  		<artifactId>servlet-api</artifactId>
  		<version>2.5</version>
	</dependency>
	    
	<dependency>
	  	<groupId>javax.servlet.jsp</groupId>
  		<artifactId>jsp-api</artifactId>
  		<version>2.1</version>
	</dependency>
	    
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.4.0</version>
            <scope>runtime</scope>
        </dependency>
	    
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.1.4</version>
		    <scope>runtime</scope>
		</dependency> 
		
	<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
<dependency>
    <groupId>javax.validation</groupId>
    <artifactId>validation-api</artifactId>
    <version>2.0.0.Final</version>
</dependency>
		
		<!-- 
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>6.0.6</version>
            <scope>runtime</scope>
        </dependency>
         -->
        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
        <!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId>
            <version>4.3.11.Final</version> </dependency> -->
    </dependencies>


	<build>
    <finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.2</version>
				<configuration>
					<includes>
						<include>**/Test*.java</include>
						<include>**/*Test.java</include>
						<include>**/*TestCase.java</include>
						<include>**/*TestSuite.java</include>
						<include>**/AllTests.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.6</version>
				<configuration>
					<includeTests>true</includeTests>
					<minimumTokens>10</minimumTokens>
					<linkXref>true</linkXref>
					<targetJdk>1.8</targetJdk>
					<failOnViolation>false</failOnViolation>
				</configuration>
			</plugin>			
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.7.201606060606</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<!-- <execution> <id>default-check</id> <goals> <goal>check</goal> </goals> 
						</execution> -->
				</executions>
			</plugin>			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.3</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<!-- Optional directory to put findbugs xdoc xml report -->
					<xmlOutputDirectory>target/site</xmlOutputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.6</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.2</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependency-updates-report</report>
                            <report>plugin-updates-report</report>
                            <report>property-updates-report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <configuration>
                    <!-- stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile -->
                    <!-- XHTML Doclet -->
                    <!-- helpfile>${basedir}/src/main/javadoc/help-doc.html</helpfile -->
                    <failOnError>false</failOnError>
                    <show>public</show>

                    <!-- ${basedir}/src/main/javadoc/overview.html -->
                    <overview>${basedir}/overview.html</overview>
                    <!-- These are the only dependencies we may use -->
                    <links>
                        <link>http://java.sun.com/javase/6/docs/api/</link>
                        <link>http://junit.sourceforge.net/javadoc/</link>
                    </links>
                    <!-- detectLinks>true</detectLinks see bug http://jira.codehaus.org/browse/MJAVADOC-273 -->
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <use>false</use>
                    <quiet>true</quiet>
                    <!--<maxmemory>512</maxmemory> -->
                    <!--<minmemory>256m</minmemory> -->
                    <doctitle><![CDATA[<h1>${project.name}</h1>]]></doctitle>
                    <bottom>
                        <![CDATA[Copyright &#169; {inceptionYear}-{currentYear} Wadium. All Rights Reserved.]]></bottom>

                    <linksource>true</linksource>
                    <source>${version.java.source}</source>
                    <additionalJOption>
                        -J-XX:MaxPermSize=256m
                    </additionalJOption>
                </configuration>
                <!-- for helpdoc <dependencies> <dependency> <groupId>groupId</groupId>
                    <artifactId>artifactId</artifactId> <version>version</version> </dependency>
                    </dependencies> -->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <linkXref>true</linkXref>
                </configuration>
            </plugin>


			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
			</plugin>
			<!-- ff uit <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>jxr-maven-plugin</artifactId> 
				</plugin> -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<tagListOptions>
						<tagClasses>
							<tagClass>
								<displayName>Todo Work</displayName>
								<tags>
									<tag>
										<matchString>todo</matchString>
										<matchType>ignoreCase</matchType>
									</tag>
									<tag>
										<matchString>FIXME</matchString>
										<matchType>exact</matchType>
									</tag>
								</tags>
							</tagClass>
						</tagClasses>
					</tagListOptions>
					<tags>
						<tag>System.out.print</tag>
						<tag>@deprecated</tag>
						<tag>printStackTrace()</tag>
						<tag>TODO</tag>
						<tag>todo</tag>
						<tag>ToDo</tag>
						<tag>REDO</tag>
						<tag>redo</tag>
						<tag>ReDo</tag>
						<tag>FIXME</tag>
						<tag>fixme</tag>
						<tag>FixMe</tag>
					</tags>
				</configuration>
			</plugin>


            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jdepend-maven-plugin</artifactId>
            </plugin>
            <!-- ff uit <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>jxr-maven-plugin</artifactId>
                </plugin> -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <tagListOptions>
                        <tagClasses>
                            <tagClass>
                                <displayName>Todo Work</displayName>
                                <tags>
                                    <tag>
                                        <matchString>todo</matchString>
                                        <matchType>ignoreCase</matchType>
                                    </tag>
                                    <tag>
                                        <matchString>FIXME</matchString>
                                        <matchType>exact</matchType>
                                    </tag>
                                </tags>
                            </tagClass>
                        </tagClasses>
                    </tagListOptions>
                    <tags>
                        <tag>System.out.print</tag>
                        <tag>@deprecated</tag>
                        <tag>printStackTrace()</tag>
                        <tag>TODO</tag>
                        <tag>todo</tag>
                        <tag>ToDo</tag>
                        <tag>REDO</tag>
                        <tag>redo</tag>
                        <tag>ReDo</tag>
                        <tag>FIXME</tag>
                        <tag>fixme</tag>
                        <tag>FixMe</tag>
                    </tags>
                </configuration>
            </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.19.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.3</version>
			</plugin>


            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.3</version>
            </plugin>
<!-- 
		      <plugin>
		        <groupId>org.codehaus.mojo</groupId>
		        <artifactId>javancss-maven-plugin</artifactId>
		        <version>2.1</version>
		      </plugin>
		       -->
        </plugins>
    </reporting>
</project>
